feature: Extend Gateway Metrics and Events with connection status
Details:
- Implement gateway connection stats ONLINE/OFFLINE events same like live
  gateway frames. The last CONN STAT events (per gateway) can be retained,
  providing a configurable amount of history when opening the connection
  stat page (default is 10).
- Extend Gateway Metrics with gateway stats packets and Connection Stat events
  (ONLINE/OFFLINE).
- Heatmap shows percentage based on value for Gateways and devices details page.
